# aberconics-framework

./: .gitignore  D2C.md  GEMINI.md  LICENSE  README.md  abercsonics_experiment_report.txt  codex_context.txt  d2c_milestone_d_roadmap.md  package-lock.json  pytest.ini
.github/workflows/: ci.yml
code/c++ core/: ABERSOE_MODULE_PLAN.md  CMakeLists.txt  CPP_PORT_PLAN.md  C_ABI_PLAN.md  GST_OPERATOR_DYNAMICS_PLAN.md  HIERARCHICAL_MIN_PLAN.md  README.md
code/c++ core/apps/: abersoe_cli.cpp  gfe_cli.cpp  gfe_ou_experiment.cpp  hierarchical_min_cli.cpp
code/c++ core/cmake/: gfe_coreConfig.cmake.in
code/c++ core/include/abersoe/: abersoe_config.hpp  abersoe_diagnostics.hpp  abersoe_hooks.hpp  abersoe_learning.hpp  abersoe_model.hpp  abersoe_regression.hpp  abersoe_runtime.hpp  abersoe_scenarios.hpp  hierarchical_min.hpp  hierarchical_min_coupling.hpp  hierarchical_min_diagnostics.hpp  hierarchical_min_renorm.hpp
code/c++ core/include/gfe/: gfe_assumptions.hpp  gfe_backend.hpp  gfe_c_api.h  gfe_core.hpp  gfe_dynamics.hpp  gfe_energy.hpp  gfe_gst.hpp  gfe_verification.hpp
code/c++ core/src/: abersoe_config.cpp  abersoe_diagnostics.cpp  abersoe_hooks.cpp  abersoe_learning.cpp  abersoe_regression.cpp  abersoe_runtime.cpp  abersoe_scenarios.cpp  gfe_assumptions.cpp  gfe_backend.cpp  gfe_c_api.cpp  gfe_core.cpp  gfe_dynamics.cpp  gfe_energy.cpp  gfe_gst.cpp  gfe_verification.cpp  hierarchical_min.cpp  hierarchical_min_coupling.cpp  hierarchical_min_diagnostics.cpp  hierarchical_min_renorm.cpp
code/c++ core/tests/: abersoe_smoke_test.cpp  gfe_backend_smoke_test.cpp  gfe_c_api_smoke_test.cpp  gfe_foundation_smoke_test.cpp  gst_smoke_test.cpp  hierarchical_min_benchmark_test.cpp  hierarchical_min_consistency_test.cpp  hierarchical_min_integration_test.cpp  hierarchical_min_renorm_integration_test.cpp  hierarchical_min_renorm_test.cpp  hierarchical_min_smoke_test.cpp  hierarchical_min_unit_test.cpp  smoke_test.cpp
code/julia/: Manifest.toml  Project.toml  README.md
code/julia/archive/lorenz_extended_attempt/: Lorenz_63V2.jl
code/julia/examples/: 01_ou_noise_demo.jl  02_lorenz_chaos_suppression.jl  03_gray_scott_patterns.jl  04_echo_task_learning.jl  05_capi_ccall_smoke.jl
code/julia/src/: GFE.jl  GFE_CAPI.jl
code/julia/src/test/: GFE_CAPI_validation.jl  GFE_validation.jl  runtests.jl
code/python/: PYTHON_D2C_PLAN.md  README.md  ctypes_smoke.py  gfe_ctypes.py
code/python/d2c/: README.md  __init__.py  ffi.py  reports.py  scenarios.py  schemas.py
code/python/d2c/configs/: __init__.py  hierarchy.py  kernels.py  training.py
code/python/d2c/digital/: __init__.py  baselines.py  bridge.py  metrics.py  readout.py  reports.py  streams.py  tasks.py  tokens.py  traces.py
code/python/d2c/experiments/: __init__.py  lorenz63.py  symbolic_induction.py
code/python/d2c/learning/: __init__.py  analysis.py  consolidation.py  critics.py  predictive.py  reports.py  updates.py
code/python/d2c/progress/: README.md
code/python/d2c/progress/lorenz63/batch_20260507T035229Z/: batch_report.txt  batch_summary.json
code/python/d2c/progress/lorenz63/batch_20260507T035229Z/per_ic/: ic_00.json  ic_00_memory_contributions.csv  ic_01.json  ic_01_baseline_trace.csv  ic_01_memory_trace.csv  ic_02.json  ic_02_baseline_trace.csv  ic_02_memory_contributions.csv
code/python/d2c/progress/lorenz63/batch_20260511_phase4_learning/: batch_report.txt  batch_summary.json  learning_analysis.json  trace_store.json  trace_windows.json
code/python/d2c/progress/lorenz63/batch_20260511_phase4_learning/per_ic/: ic_00.json  ic_00_memory_trace.csv  ic_01.json  ic_01_memory_contributions.csv  ic_02.json  ic_02_memory_trace.csv
code/python/d2c/progress/lorenz63/learning_20260512T111937Z/: learning_history.json
code/python/d2c/progress/lorenz63/learning_20260512T123921Z/: learning_report.txt
code/python/d2c/progress/lorenz63/learning_20260512T125834Z/: learning_history.json  learning_report.txt
code/python/d2c/progress/lorenz63/learning_20260512T125953Z/: learning_report.txt
code/python/d2c/progress/lorenz63/learning_20260512T131116Z/: learning_history.json  learning_report.txt
code/python/d2c/progress/lorenz63/run_20260507T022342Z/: baseline_x.csv  memory_samples.csv  summary.json  terminal_report.txt
code/python/d2c/progress/lorenz63/run_20260507T_plot_refresh/: batch_report.txt  batch_summary.json
code/python/d2c/progress/lorenz63/run_20260507T_plot_refresh/per_ic/: ic_00.json  ic_01.json  ic_02.json
code/python/d2c/runtime/: __init__.py  director.py  scheduler.py  stability.py  trace_store.py
code/python/tests/: test_d2c_configs.py  test_d2c_digital.py  test_d2c_learning.py  test_d2c_lorenz63.py  test_d2c_phase1.py  test_d2c_runtime.py  test_gfe_ctypes.py
docs/: MIN_SOE.md  theory.md
results/gray_scott/: README.md
results/lorenz_63/: index.html
results/ou_noise/: index.html  metrics_summary.txt
